--- a/first.html
+++ b/first.html
@@ -35,6 +35,9 @@
             	<td>Govt Subsidies</td>
             	<td>File RTI</td>
             	<td>About Us</td>
+				<td>About Us</td>
+				<td>About Us</td>
+				<td>About Us</td>
             	<td><a href="D:\HTML CSS\service.com\contactus.html">Contact Us<a></td>
             	<td>Login</td>
              </tr>
