Added image to hello-world-images branch

--- a/first.html
+++ b/first.html
@@ -8,11 +8,29 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Service.com</title>
+	
+<style>
+
+body {
+
+background-color:red;
+font-family:cursive;
+background-image: url('uploadedpic.jpg');
+background-image:no-repeat;
+background-size:100% 100%;
+
+}
+
+</style>	
+
 </head>
+
+
+
 <body>
 
 	<!-- Main Table -->
-   <table bgcolor="#DFB8EA" border ="0" width="1200"  align="center">
+   <table bgcolor="#DFB8EA" border ="0" width="1200"  align="center" >
      <tr>
      	<td>
      		<!-- Header Image Table -->
@@ -47,6 +65,7 @@
             <table bgcolor="#BAEDEF" border="0" width="1200" align="center">
             	<tr style="font-size: 20px">
             		<td style="color:seagreen; ">
+					   
                         Services refer to intangible offerings provided by businesses or organizations to meet specific needs or demands of customers. The aim of services is to deliver value by addressing customers' requirements, solving their problems, or fulfilling their desires in exchange for payment or other forms of compensation. Unlike tangible goods, which are physical products that customers can touch and possess, services are characterized by their intangible nature and the unique experiences they create. The primary objective of services is to enhance customer satisfaction, loyalty, and overall well-being by delivering high-quality experiences, solutions, or outcomes. Whether it's healthcare, transportation, education, or entertainment, services play a vital role in modern society by contributing to economic development, social progress, and the overall quality of life. Therefore, businesses and organizations strive to continually improve and innovate their services to better serve their customers and achieve their objectives in a competitive marketplace.<br>
                         Services encompass a wide range of activities and offerings across various industries, including professional services, hospitality, retail, finance, and technology, among others. The aim of services varies depending on the sector and the specific needs of customers. For instance, in the professional services sector, such as consulting, legal, or accounting services, the aim is often to provide expert advice, guidance, and solutions to clients to help them achieve their business objectives or address complex challenges. 
                     </td>
