image unlinked and background color changed

--- a/first.html
+++ b/first.html
@@ -13,9 +13,9 @@
 
 body {
 
-background-color:red;
+background-color:seagreen;
 font-family:cursive;
-background-image: url('uploadedpic.jpg');
+
 background-image:no-repeat;
 background-size:100% 100%;
 
