--- a/contactus.html
+++ b/contactus.html
@@ -8,6 +8,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact us</title>
+<style>
+
+body {
+background-color:red;
+}
+</style>
 </head>
 <body>
 
